--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
   <section class="container-fluid px-0">
     <div class="row align-items-center">
       <div id="headings" class="col-lg-6 text-white d-none d-lg-block mt-5 text-center">
-        <h2 class="display-4">MOUTAINS <span>/</span> OF <span>/</span> THE WORLD</h2>
-        <h2 class="display-4">MOUTAINS <span>/</span> OF <span>/</span> THE WORLD</h2>
-        <h2 class="display-4">MOUTAINS <span>/</span> OF <span>/</span> THE WORLD</h2>
+        <h2 class="display-4"><span>-</span> MOUTAINS <span>-</span> OF <span>-</span> THE WORLD <span>-</span></h2>
+        <h2 class="display-4"><span>-</span> MOUTAINS <span>-</span> OF <span>-</span> THE WORLD <span>-</span></h2>
+        <h2 class="display-4"><span>-</span> MOUTAINS <span>-</span> OF <span>-</span> THE WORLD <span>-</span></h2>
       </div>
       <div class="col-lg-6 montagnes">
         <img class="img-fluid px-0" src="images/moutains/a1.jpg" alt="">
