--- a/index.html
+++ b/index.html
@@ -27,23 +27,23 @@
     <div class="collapse navbar-collapse" id="links">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a href="#" class="nav-link">HOME</a>
+          <a href="#home" class="nav-link">HOME</a>
         </li>
       </ul>
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a href="#" class="nav-link">ABOUT</a>
+          <a href="#about" class="nav-link">ABOUT</a>
         </li>
       </ul>
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a href="#" class="nav-link">CONTACT</a>
+          <a href="#contact" class="nav-link">CONTACT</a>
         </li>
       </ul>
     </div>
   </nav>
   <section class="container-fluid px-0">
-    <div class="row align-items-center">
+    <div id="home" class="row align-items-center">
       <div id="headings" class="col-lg-6 text-white d-none d-lg-block mt-5 text-center">
         <h2 class="display-4"><span>-</span> MOUTAINS <span>-</span> OF <span>-</span> THE WORLD <span>-</span></h2>
         <h2 class="display-4"><span>-</span> MOUTAINS <span>-</span> OF <span>-</span> THE WORLD <span>-</span></h2>
@@ -76,7 +76,7 @@
       </div>
     </div>
 
-    <div class="row align-items-center content">
+    <div id="about" class="row align-items-center content">
       <div class="col-md-6 text-center text-white">
         <div class="row justify-content-center">
           <div class="col-10 col-lg-8 paraph mb-5 mb-md-0">
@@ -97,7 +97,7 @@
       </div>
     </div>
 
-    <div class="row align-items-center content">
+    <div id="contact" class="row align-items-center content">
       <div class="col-md-6 order-2 order-md-1 montagnes">
         <img class="img-fluid" src="images/moutains/a4.jpg" alt="">
       </div>
@@ -107,12 +107,16 @@
             <h2>MOUTAINS OF VIEW</h2>
             <i class="fas fa-mountain icone d-none d-lg-inline"></i>
             <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis qui ullam nihil, at
-              accusamus beatae
-              ipsam quos id nobis maxime. In quos optio provident eos ipsam temporibus quas dolores libero? Esse, iste
-              omnis dolor
-              porro vitae in natus minima sequi quod. Vel distinctio delectus repellat quibusdam laborum ipsam ut,
-              recusandae,
-              porro totam doloribus amet sint voluptatum inventore molestias, error omnis?</p>
+              accusamus beatae</p>
+            <p>
+              <strong>Corporation, Inc.</strong><br />
+              42 Galaxy Street, BOX 2<br />
+              Moon, MO 424242<br />
+              <abbr title="Phone">P:</abbr> (123) 456-7890<br />
+              <strong>Full Name</strong><br />
+              <a href="mailto:#">first.last@example.com</a>
+            </p>
+
           </div>
         </div>
       </div>
@@ -133,4 +137,5 @@
     });
   </script>
 </body>
+
 </html>
